Link alert with dataset instead of data quality test (#659)
Link alert with dataset instead of data quality test